--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -11,9 +11,15 @@
               tools:layout="@layout/input_fragment">
         <action android:id="@+id/action_inputFragment_to_resultFragment"
                 app:destination="@id/resultFragment"/>
+        <action android:id="@+id/action_inputFragment_to_resultFragment2" app:destination="@id/resultFragment"
+                app:enterAnim="@anim/nav_default_enter_anim" app:exitAnim="@anim/nav_default_exit_anim"
+                app:popEnterAnim="@anim/nav_default_pop_enter_anim" app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
     </fragment>
     <fragment android:id="@+id/resultFragment"
               android:name="com.testbook.githubpr.ui.result.ResultFragment"
               android:label="result_fragment"
-              tools:layout="@layout/result_fragment"/>
+              tools:layout="@layout/result_fragment">
+        <argument android:name="username" app:argType="string"/>
+        <argument android:name="repo_name" app:argType="string"/>
+    </fragment>
 </navigation>
