--- a/app/src/main/res/layout/input_fragment.xml
+++ b/app/src/main/res/layout/input_fragment.xml
@@ -22,8 +22,7 @@
                 android:layout_height="wrap_content"
                 android:hint="Enter username"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-        />
+                app:layout_constraintStart_toStartOf="parent"/>
 
         <ImageButton
                 android:id="@+id/username_submit"
@@ -42,7 +41,30 @@
             android:paddingStart="26dp"
             android:paddingEnd="26dp"
             android:paddingBottom="20dp"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@id/input_container"/>
+
+    <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/loading_animation"
+            android:visibility="gone"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:lottie_rawRes="@raw/loading"
+            app:lottie_autoPlay="true"
+            app:lottie_loop="true"
+            android:layout_width="100dp"
+            android:layout_height="100dp"/>
+
+    <TextView
+            android:id="@+id/error_message"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/loading_animation"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
