--- a/app/src/main/res/layout/list_pull_request.xml
+++ b/app/src/main/res/layout/list_pull_request.xml
@@ -8,7 +8,7 @@
         android:layout_height="wrap_content">
 
     <TextView
-            android:id="@+id/repo_name"
+            android:id="@+id/pr_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingStart="12dp"
@@ -17,37 +17,34 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             android:textSize="20sp"
-            android:textStyle="bold"
-            android:text="Repo Name"/>
+            android:textStyle="bold"/>
 
     <TextView
-            android:id="@+id/repo_description"
+            android:id="@+id/pr_description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingStart="12dp"
             android:paddingEnd="12dp"
-            app:layout_constraintTop_toBottomOf="@id/repo_name"
+            app:layout_constraintTop_toBottomOf="@id/pr_title"
             app:layout_constraintStart_toStartOf="parent"
-            android:textSize="16sp"
-            android:text="Repo Name"/>
+            android:textSize="16sp"/>
 
     <TextView
-            android:id="@+id/repo_language"
+            android:id="@+id/pr_author"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:paddingTop="10dp"
             android:paddingStart="12dp"
             android:paddingEnd="12dp"
-            app:layout_constraintTop_toBottomOf="@id/repo_description"
+            app:layout_constraintTop_toBottomOf="@id/pr_description"
             app:layout_constraintStart_toStartOf="parent"
-            android:textSize="12sp"
-            android:text="Repo Name"/>
+            android:textSize="12sp"/>
 
     <View
             android:layout_marginTop="20dp"
-            app:layout_constraintTop_toBottomOf="@id/repo_language"
+            app:layout_constraintTop_toBottomOf="@id/pr_author"
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:background="#848D95" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
